--- a/child/src/main/webapp/WEB-INF/web.xml
+++ b/child/src/main/webapp/WEB-INF/web.xml
@@ -13,4 +13,5 @@
   <filter-mapping>
     <filter-name>jfinal</filter-name>
     <url-pattern>/*</url-pattern>
-  </filter-mapping></web-app>
+  </filter-mapping>
+</web-app>
